--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ div#downloads {
     display: flex;
     flex-direction: column;
     align-items: start;
-    margin: 64px 30vw 64px 100px;
+    margin: 0 30vw 0 100px;
     font-size: .875rem;
 }
 div#downloads img {
@@ -145,5 +145,6 @@ div#downloads .links a:active {
     }
     div#downloads {
         align-items: center;
+        margin: 64px 0;
     }
 }
